[package]
name = "http-next-link"
version = "0.1.0"
edition = "2018"
description = "Parsing http header Link with rels=Next."
documentation = "https://docs.rs/http-next-link/"
repository = "https://github.com/oxidecomputer/third-party-api-clients/tree/main/http-next-link"
license = "MIT"

[dependencies]
anyhow = "1"
itertools = "0.10"
